# hypervault-ai-platform

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: Dockerfile  Dockerfile.dev  cloudbuild.yaml  deploy_cloudrun.sh  supervisord.conf
infra/: cleanup.sh  create_tables.sql  docker-init.sql  seed_data.sql  setup_alloydb.sh  setup_vertex_ai.sh  setup_vpc.sh
src/: app.py  config.py  db.py
src/api/: __init__.py  dependencies.py  error_handlers.py  main.py  schemas.py
src/api/routers/: __init__.py  reasoning.py  search.py  security.py  sustainability.py
src/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
src/reasoning_engine/: __init__.py  engine.py  gemini_client.py  realtime_pipeline.py  sustainability_analyzer.py
src/security/: __init__.py  context.py  context_switcher.py  identity.py  policy.py  rls_policies.sql  secure_connection.py  secure_query.py
src/vector_engine/: __init__.py  batch_embeddings.sql  benchmark.py  engine.py  vector_search.py
terraform/: alloydb.tf  cloud_run.tf  iam.tf  main.tf  networking.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_connection_safety.py  test_error_handling.py  test_reasoning.py  test_reasoning_engine.py  test_rls_enforcement.py  test_security.py  test_vector_engine.py  test_vector_perf.py
